<resources>
    <string name="app_name">Reconciliapp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_failed_dialog_title">Error al intentar iniciar sesión</string>
    <string name="field_valiation_empty">Este campo no puede ser vacío.</string>
    <string name="field_validation_email">Escribe un correo valido</string>
    <string name="wait">Espere</string>
    <string name="log_in">INICIAR SESIÓN</string>
    <string name="register">REGISTRATE</string>
    <string name="app_name_upper_case">RECONCILIAPP</string>
    <string name="create_account_text">No tienes una cuenta?</string>
    <string name="registrate_para_empezar">REGISTRATE PARA EMPEZAR...</string>
</resources>